quick fix of resume dimensions on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -235,7 +235,8 @@ html{
 }
 
 #resume{
-	max-width: 100%;
+	max-height: 100%;
+
 }
 
 /*footer*/
